--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,11 @@
     "lint:fix": "eslint . --fix",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
+    "type-check": "tsc --noEmit",
+    "type-check:watch": "tsc --noEmit --watch",
+    "quality-check": "npm run lint && npm run format:check && npm run type-check",
+    "quality-fix": "npm run lint:fix && npm run format",
+    "prepare": "husky",
     "preview": "vite preview"
   },
   "dependencies": {
