[BE][update] - Update requirements file remove unused packages and add all the package versions

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,16 +1,14 @@
-fastapi
-uvicorn[standard]
-sqlalchemy[asyncio]
-aiosqlite
-pydantic
-pydantic-settings
-openai
-python-dotenv
-httpx
-pytest
-pytest-asyncio
-pytest-cov
-websockets
-pre-commit
-ruff
-mypy
+fastapi==0.115.14
+uvicorn[standard]==0.35.0
+sqlalchemy[asyncio]==2.0.41
+aiosqlite==0.21.0
+pydantic==2.11.7
+pydantic-settings==2.10.1
+openai==1.93.0
+websockets==15.0.1
+pytest==8.4.1
+pytest-asyncio==1.0.0
+pytest-cov==6.2.1
+pre-commit==3.7.1
+ruff==0.4.4
+mypy==1.8.0
