--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,8 @@
     "type-check:watch": "tsc --noEmit --watch",
     "quality-check": "npm run lint && npm run format:check && npm run type-check",
     "quality-fix": "npm run lint:fix && npm run format",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prepare": "cd .. && husky frontend/.husky"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
@@ -34,9 +35,17 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.2.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.1.2",
     "prettier": "^3.6.2",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.34.1",
     "vite": "^7.0.0"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --format stylish",
+      "prettier --write"
+    ]
   }
 }
